--- a/index.html
+++ b/index.html
@@ -111,5 +111,6 @@
             </ul>
         </div>
     </footer>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </body>
 </html>
