--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
             </ul>
         </div>
     </footer>
+<link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-</body>
 </html>
